@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="US-ASCII"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <launch4jConfig>
 	<headerType>gui</headerType>
 	<outfile>jedit.exe</outfile>
@@ -8,17 +8,17 @@
 	<downloadUrl>http://www.java.com/download</downloadUrl>
 	<supportUrl>http://www.jEdit.org</supportUrl>
 	<cmdLine>-reuseview</cmdLine>
-	<customProcName>false</customProcName>
+	<customProcName>true</customProcName>
 	<stayAlive>true</stayAlive>
 	<icon>@base.dir@/icons/jedit.ico</icon>
 	<jre>
 		<minVersion>@target.java.version@.0</minVersion>
-		<jdkPreference>preferJre</jdkPreference>
+		<jdkPreference>preferJdk</jdkPreference>
 	</jre>
 	<versionInfo>
 		<fileVersion>@jedit.build.number@</fileVersion>
 		<txtFileVersion>@jedit.version@</txtFileVersion>
-		<fileDescription>Programmer&apos;s Text Editor</fileDescription>
+		<fileDescription>jEdit - Programmer&apos;s Text Editor</fileDescription>
 		<copyright>Copyright (C) 1998-@current.year@ Contributors</copyright>
 		<productVersion>@jedit.build.number@</productVersion>
 		<txtProductVersion>@jedit.version@</txtProductVersion>
